package thales.model.protoBuf.clientToServer;

option java_package = "thales.model.protoBuf.clientToServer";
option java_multiple_files = true;

message LocalDateTimeProto {
    required int32 year = 1;
    required int32 month = 2;
    required int32 day = 3;
    required int32 hour = 4;
    required int32 minute = 5;
    required int32 second = 6;
    required int32 nanosecond = 7;
}

message CreateUserRequest {
    optional int64 userId     = 1;
    required string firstName = 2;
    required string lastName  = 3;
    required bool isEnabled   = 4;
    required bool isReadOnly  = 5;
    required bool sendReports = 6;
    required int32 leverage   = 7;
    required string email     = 8;
    required string comment   = 9;
}

message OpenTradeRequest {
    required int64 login                               = 1;
    required string symbol                             = 2;
    required int32 tradeType                           = 3;
    required int32 volume                              = 4;
    optional double stopLoss                           = 5;
    optional double takeProfit                         = 6;
    optional LocalDateTimeProto pendingTradeExpiration = 7;
    required string comment                            = 8;
}
